sbi-manifests/sbi-cms-mapping/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-mapping
  namespace: sbi
  labels:
    app: sbi-cms-mapping
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-mapping
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-mapping
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 55726a243310b165b762edcf625f86a0dcf8488b1310aeea74282c73ad5f7b54
    spec:
      serviceAccountName: sbi-cms-mapping-sa
      volumes:
        - name: key-cert-vol
          configMap:
            name: public-private-key
        - name: visa-npci-key-configmap-volume
          configMap:
            name: visa-npci-key-configmap
        - name: dcms-keys-volume
          configMap:
            name: dcms-keys-configmap
        - name: sbi-keys-volume
          configMap:
            name: sbi-keys-configmap
      containers:
        - name: sbi-cms-mapping
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-mapping:sbi-uat.v103
          volumeMounts:
            - name: key-cert-vol
              mountPath: /config
            - name: visa-npci-key-configmap-volume
              mountPath: /data
            - name: dcms-keys-volume
              mountPath: /vol
            - name: sbi-keys-volume
              mountPath: /sbi
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
